--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <body id="app">
         <header :class="{ dark: store.dark }">
             <div class="logo">
-                <h2>OMDL</h2>
+                <h2>OMADL</h2>
                 <p>v1.1.0</p>
             </div>
             <nav class="nav">
@@ -76,6 +76,12 @@
                         href="https://discord.gg/zUdf7MkYn9"
                         target="_blank"
                         >Submit Record</a
+                    >
+                    <a
+                        class="nav__cta type-label-lg"
+                        href="https://discord.gg/zUdf7MkYn9"
+                        target="_blank"
+                        >Submit Level</a
                     >
                 </div>
             </nav>
