--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         >Submit Record</a
                     >
                     <a
-                        class="nav__cta type-label-lg"
+                        class="submit-level"
                         href="https://discord.gg/zUdf7MkYn9"
                         target="_blank"
                         >Submit Level</a
