Reverted Submit Level button

--- a/index.html
+++ b/index.html
@@ -73,15 +73,9 @@
                     <!-- List record submission form, add a link to replace the '#' when putting a link to your list submission form-->
                     <a
                         class="nav__cta type-label-lg"
-                        href="https://discord.gg/zUdf7MkYn9"
+                        href="https://forms.gle/Z3SQRkTzLphWFtXCA"
                         target="_blank"
                         >Submit Record</a
-                    >
-                    <a
-                        class="submit-level"
-                        href="https://discord.gg/zUdf7MkYn9"
-                        target="_blank"
-                        >Submit Level</a
                     >
                 </div>
             </nav>
