--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <header :class="{ dark: store.dark }">
             <div class="logo">
                 <h2>OMADL</h2>
-                <p>v1.1.0</p>
+                <p>v1.2.0</p>
             </div>
             <nav class="nav">
                 <router-link class="nav__tab" to="/">
@@ -75,8 +75,7 @@
                         class="nav__cta type-label-lg"
                         href="https://forms.gle/Z3SQRkTzLphWFtXCA"
                         target="_blank"
-                        >Submit Record</a
-                    >
+                        >Submit Record</a>
                 </div>
             </nav>
         </header>
