Removed cataclysm guy from editors

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <!-- List record submission form, add a link to replace the '#' when putting a link to your list submission form-->
                     <a
                         class="nav__cta type-label-lg"
-                        href="https://forms.gle/Z3SQRkTzLphWFtXCA"
+                        href="https://discord.gg/zUdf7MkYn9"
                         target="_blank"
                         >Submit Record</a>
                 </div>
